# NixNodes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
docs/: node_sketches.md
include/: ConnectionItem.hpp  MainWindow.hpp  NodeItem.hpp  WelcomeWidget.hpp
include/lang/: NixExpr.hpp  connection.hpp  graph.hpp  io.hpp  node.hpp
include/nodes/: Canvas.hpp  Node.hpp  Port.hpp  io.hpp
src/: MainWindow.cpp  WelcomeWidget.cpp  main.cpp  mainwindow.cpp  welcome_widget.cpp
src/lang/: connection.cpp  graph.cpp  io.cpp  node.cpp
src/nodes/: Canvas.cpp  ConnectionItem.cpp  Node.cpp  NodeItem.cpp  Port.cpp  io.cpp  node.cpp
